--- a/src/components/BlogPage/terry-sso/terry-sso1.mdx
+++ b/src/components/BlogPage/terry-sso/terry-sso1.mdx
@@ -58,8 +58,7 @@ On the topic of respectable tech companies,
   https://terrylockett.ca is a website founded by my brother in 2011. 
 At the time of this writing, it has just celebrated it's 10th birthday of being on the internet!
 The site offers its visitors a cornicopia of content & features,
-  including a W3C certification, a picture of a cat, two gifs of _Snoop-Dogg_, 
-  and a variety of flash based videos.
+  including a W3C certification, a picture of a cat, and a variety of flash based videos.
 
 In an effort to keep up with the big dogs, https://terrylockett.ca will now also support
   provide authentication solution for 3rd party sites.
